# lseg-thematic-portfolio-optimization

./: .gitignore  CLAUDE_TASK.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: settings.yaml
scripts/: run_demo.py
src/: backtest.py  black_litterman.py  covariance.py  data_fetcher.py  factor_analysis.py  metrics.py  portfolio.py  preprocessing.py  rebalancer.py  stress.py  utils.py  visualization.py
tests/: test_black_litterman.py  test_covariance.py  test_erc.py  test_portfolio.py  test_stress.py
